# cadsa-research

./: .gitignore  README.md  cd13.ipynb  example.py  out.csv  pyproject.toml
data/: PRESIDENTIAL_PREF._-_DEM_03-03-20_Democratic_by_Precinct_4085-7014.csv
data/LA_County_March_20_results/: 23RD_STATE_SENATE_DIST_03-03-20_Voter_Nominated_by_Precinct_4085-6690.xls  32ND_CONGRESS_DIST_03-03-20_Voter_Nominated_by_Precinct_4085-6703.xls  38TH_CONGRESS_DIST_03-03-20_Voter_Nominated_by_Precinct_4085-6708.xls  41ST_ASSEMBLY_DIST_03-03-20_Voter_Nominated_by_Precinct_4085-6668.xls  43RD_CONGRESS_DIST_03-03-20_Voter_Nominated_by_Precinct_4085-6711.xls  48TH_ASSEMBLY_DIST_03-03-20_Voter_Nominated_by_Precinct_4085-6673.xls  ANTELOPE_VLY_HEALTH_-_AV_03-03-20_by_Precinct_4085-7227.xls  ARTESIA_CITY_SPC_MUNI-BB_03-03-20_by_Precinct_4085-7215.xls  AVALON_CY_SPC_MUNI-U-T_03-03-20_by_Precinct_4085-7159.xls  CCC_38TH_ASSEMBLY_-_REP_03-03-20_Republican_by_Precinct_4085-7030.xls  CCC_41ST_ASSEMBLY_-_DEM_03-03-20_Democratic_by_Precinct_4085-7035.xls  CCC_45TH_ASSEMBLY_-_DEM_03-03-20_Democratic_by_Precinct_4085-7044.xls  CCC_48TH_ASSEMBLY_-_DEM_03-03-20_Democratic_by_Precinct_4085-7050.xls  CCC_52ND_ASSEMBLY_-_DEM_03-03-20_Democratic_by_Precinct_4085-7062.xls  CCC_57TH_ASSEMBLY_-_DEM_03-03-20_Democratic_by_Precinct_4085-7074.xls  (+41 more)
electoral/: README.md
electoral/models/: precinct.py
models/: election.py  precinct.py
scripts/: .reshape_results.py.swp  .transform_precinct.py.swp  Collate Results-Tal.ipynb  Collate Results.ipynb  block2blockgroup.py  reshape_results.py  transform_precinct.py
(+1250 files in other folders)
