[tool.poetry]
name = "qgis_ca"
version = "0.1.0"
description = ""
authors = ["Tal Levy <tal42levy@gmail.com>"]
packages = [ ]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.4.2"
geojson = "^2.5.0"
us = "^2.0.2"
census = "^0.8.19"
geopandas = "^0.12.2"
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py36"]
include = ".pyi?$"
exclude = """
(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)
"""
